# LostLoveProtocol

./: .gitattributes  .gitignore  Cargo.toml  HANDSHAKE-SUCCESS.md  IMPLEMENTATION_STATUS.md  INSTALL-WINDOWS.md  LostLoveProtocol.sln  PROGRESS.md  README.md  VPS-SETUP.md  WINDOWS-CLIENT.md  fix-compilation.sh  test_handshake.py
.claude/: settings.local.json
LostLoveProtocol/: LostLoveProtocol.vcxproj
LostLoveProtocol/x64/Debug/: LostLoveProtocol.exe.recipe
LostLoveProtocol/x64/Debug/LostLoveProtocol.tlog/: LostLoveProtocol.lastbuildstate
client/: .gitignore  LLP-Client.ps1  README.md
client-csharp/: HANDSHAKE-IMPLEMENTATION.md  README.md  TEST-HANDSHAKE.md  build-simple.ps1  build.ps1
client-csharp/LLPClient/: ClientConfig.cs  LLPClient.csproj  Program.cs  TunDevice.cs  VpnClient.cs
client-csharp/LLPClient/Crypto/: Handshake.cs  PacketEncryption.cs
client/configs/: .gitkeep
config/: client.toml.example  server.toml.example
crates/llp-client/: Cargo.toml
crates/llp-client/src/: config.rs  connection.rs  lib.rs  main.rs  tunnel.rs
crates/llp-core/: Cargo.toml
crates/llp-core/src/: crypto.rs  error.rs  handshake.rs  lib.rs  packet.rs  session.rs
crates/llp-mimicry/: Cargo.toml
crates/llp-mimicry/src/: error.rs  lib.rs  timing.rs  wrapper.rs
crates/llp-mimicry/src/profiles/: mod.rs  rutube.rs  vk_video.rs  yandex_music.rs
crates/llp-server/: Cargo.toml
crates/llp-server/src/: client_handler.rs  client_registry.rs  config.rs  dpi_bypass.rs  listener.rs  main.rs  nat.rs  router.rs  tun_device.rs
installer/: install.sh
