[workspace]
resolver = "2"
members = [
    "crates/llp-core",
    "crates/llp-mimicry",
    "crates/llp-server",
    "crates/llp-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["LLP Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Криптография
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
zeroize = { version = "1.7", features = ["derive"] }

# Сериализация и работа с байтами
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ошибки и утилиты
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_core = "0.6"

# Время
chrono = "0.4"

# Конфигурация
toml = "0.8"
