[package]
name = "llp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "llp-client"
path = "src/main.rs"

[lib]
name = "llp_client"
path = "src/lib.rs"

[dependencies]
# Зависимости от локальных крейтов
llp-core = { path = "../llp-core" }
llp-mimicry = { path = "../llp-mimicry" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Сериализация
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Ошибки
thiserror = { workspace = true }
anyhow = { workspace = true }

# Логирование
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Случайные числа
rand = { workspace = true }

# TUN/TAP интерфейс (кроссплатформенный)
tun = { version = "0.6", features = ["async"] }

# Работа с IP пакетами
pnet = "0.34"
pnet_packet = "0.34"

# Async channels
async-channel = "2.1"

# Clap для CLI аргументов
clap = { version = "4.4", features = ["derive"] }

# Платформо-специфичные зависимости
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["user"] }

[dev-dependencies]
tokio-test = "0.4"
